--- a/src/title.ipynb
+++ b/src/title.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "irish-transcription",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "saving-handle",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "classified-organization",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "        {\"text\": \"so bounded\", \"tag\": \"Verb\"},\n",
     "        {\"text\": \"by\", \"tag\": \"Adp\"},\n",
     "        {\"text\": \"time,\", \"tag\": \"Nobj\"},\n",
-    "        {\"text\": \"by,\", \"tag\": \"Adp\"},\n",
+    "        {\"text\": \"by\", \"tag\": \"Adp\"},\n",
     "        {\"text\": \"its order\", \"tag\": \"Nobj\"}\n",
     "    ],\n",
     "    \"arcs\": [\n",
@@ -59,102 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "id": "minor-compatibility",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
-      "text/html": [
-       "<span class=\"tex2jax_ignore\"><!DOCTYPE html>\n",
-       "<html lang=\"en\">\n",
-       "    <head>\n",
-       "        <title>displaCy</title>\n",
-       "    </head>\n",
-       "\n",
-       "    <body style=\"font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; padding: 4rem 2rem; direction: ltr\">\n",
-       "<figure style=\"margin-bottom: 6rem\">\n",
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"0c6389f9d50f461d8c79b3040d2c4c2e-0\" class=\"displacy\" width=\"950\" height=\"242.0\" direction=\"ltr\" style=\"max-width: none; height: 242.0px; color: #000000; background: #F5F5F5; font-family: Times New Roman; direction: ltr\">\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">We're</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">Subj</tspan>\n",
-       "</text>\n",
-       "\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"200\">so bounded</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"200\">Verb</tspan>\n",
-       "</text>\n",
-       "\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"350\">by</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"350\">Adp</tspan>\n",
-       "</text>\n",
-       "\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"500\">time,</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"500\">Nobj</tspan>\n",
-       "</text>\n",
-       "\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"650\">by,</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"650\">Adp</tspan>\n",
-       "</text>\n",
-       "\n",
-       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n",
-       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"800\">its order</tspan>\n",
-       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"800\">Nobj</tspan>\n",
-       "</text>\n",
-       "\n",
-       "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-0\" stroke-width=\"2px\" d=\"M70,152.0 C70,77.0 195.0,77.0 195.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
-       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n",
-       "    </text>\n",
-       "    <path class=\"displacy-arrowhead\" d=\"M70,154.0 L67,147.0 73,147.0\" fill=\"currentColor\"/>\n",
-       "</g>\n",
-       "\n",
-       "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-1\" stroke-width=\"2px\" d=\"M220,152.0 C220,77.0 345.0,77.0 345.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
-       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">agent</textPath>\n",
-       "    </text>\n",
-       "    <path class=\"displacy-arrowhead\" d=\"M345.0,154.0 L348.0,147.0 342.0,147.0\" fill=\"currentColor\"/>\n",
-       "</g>\n",
-       "\n",
-       "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-2\" stroke-width=\"2px\" d=\"M370,152.0 C370,77.0 495.0,77.0 495.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
-       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">pobj</textPath>\n",
-       "    </text>\n",
-       "    <path class=\"displacy-arrowhead\" d=\"M495.0,154.0 L498.0,147.0 492.0,147.0\" fill=\"currentColor\"/>\n",
-       "</g>\n",
-       "\n",
-       "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-3\" stroke-width=\"2px\" d=\"M220,152.0 C220,2.0 650.0,2.0 650.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
-       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">agent</textPath>\n",
-       "    </text>\n",
-       "    <path class=\"displacy-arrowhead\" d=\"M650.0,154.0 L653.0,147.0 647.0,147.0\" fill=\"currentColor\"/>\n",
-       "</g>\n",
-       "\n",
-       "<g class=\"displacy-arrow\">\n",
-       "    <path class=\"displacy-arc\" id=\"arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-4\" stroke-width=\"2px\" d=\"M670,152.0 C670,77.0 795.0,77.0 795.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n",
-       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
-       "        <textPath xlink:href=\"#arrow-0c6389f9d50f461d8c79b3040d2c4c2e-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">pobj</textPath>\n",
-       "    </text>\n",
-       "    <path class=\"displacy-arrowhead\" d=\"M795.0,154.0 L798.0,147.0 792.0,147.0\" fill=\"currentColor\"/>\n",
-       "</g>\n",
-       "</svg>\n",
-       "</figure>\n",
-       "</body>\n",
-       "</html></span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<span class=\"tex2jax_ignore\"><!DOCTYPE html>\n<html lang=\"en\">\n    <head>\n        <title>displaCy</title>\n    </head>\n\n    <body style=\"font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; padding: 4rem 2rem; direction: ltr\">\n<figure style=\"margin-bottom: 6rem\">\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xml:lang=\"en\" id=\"16f46ad6d5e040b5ad8bd3c2e67ba003-0\" class=\"displacy\" width=\"950\" height=\"242.0\" direction=\"ltr\" style=\"max-width: none; height: 242.0px; color: #000000; background: #F5F5F5; font-family: Times New Roman; direction: ltr\">\n<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">We're</tspan>\n    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">Subj</tspan>\n</text>\n\n<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"200\">so bounded</tspan>\n    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"200\">Verb</tspan>\n</text>\n\n<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"350\">by</tspan>\n    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"350\">Adp</tspan>\n</text>\n\n<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"500\">time,</tspan>\n    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"500\">Nobj</tspan>\n</text>\n\n<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"650\">by</tspan>\n    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"650\">Adp</tspan>\n</text>\n\n<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"182.0\">\n    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"800\">its order</tspan>\n    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"800\">Nobj</tspan>\n</text>\n\n<g class=\"displacy-arrow\">\n    <path class=\"displacy-arc\" id=\"arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-0\" stroke-width=\"2px\" d=\"M70,152.0 C70,77.0 195.0,77.0 195.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n        <textPath xlink:href=\"#arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-0\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">nsubj</textPath>\n    </text>\n    <path class=\"displacy-arrowhead\" d=\"M70,154.0 L67,147.0 73,147.0\" fill=\"currentColor\"/>\n</g>\n\n<g class=\"displacy-arrow\">\n    <path class=\"displacy-arc\" id=\"arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-1\" stroke-width=\"2px\" d=\"M220,152.0 C220,77.0 345.0,77.0 345.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n        <textPath xlink:href=\"#arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-1\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">agent</textPath>\n    </text>\n    <path class=\"displacy-arrowhead\" d=\"M345.0,154.0 L348.0,147.0 342.0,147.0\" fill=\"currentColor\"/>\n</g>\n\n<g class=\"displacy-arrow\">\n    <path class=\"displacy-arc\" id=\"arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-2\" stroke-width=\"2px\" d=\"M370,152.0 C370,77.0 495.0,77.0 495.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n        <textPath xlink:href=\"#arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-2\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">pobj</textPath>\n    </text>\n    <path class=\"displacy-arrowhead\" d=\"M495.0,154.0 L498.0,147.0 492.0,147.0\" fill=\"currentColor\"/>\n</g>\n\n<g class=\"displacy-arrow\">\n    <path class=\"displacy-arc\" id=\"arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-3\" stroke-width=\"2px\" d=\"M220,152.0 C220,2.0 650.0,2.0 650.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n        <textPath xlink:href=\"#arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-3\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">agent</textPath>\n    </text>\n    <path class=\"displacy-arrowhead\" d=\"M650.0,154.0 L653.0,147.0 647.0,147.0\" fill=\"currentColor\"/>\n</g>\n\n<g class=\"displacy-arrow\">\n    <path class=\"displacy-arc\" id=\"arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-4\" stroke-width=\"2px\" d=\"M670,152.0 C670,77.0 795.0,77.0 795.0,152.0\" fill=\"none\" stroke=\"currentColor\"/>\n    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n        <textPath xlink:href=\"#arrow-16f46ad6d5e040b5ad8bd3c2e67ba003-0-4\" class=\"displacy-label\" startOffset=\"50%\" side=\"left\" fill=\"currentColor\" text-anchor=\"middle\">pobj</textPath>\n    </text>\n    <path class=\"displacy-arrowhead\" d=\"M795.0,154.0 L798.0,147.0 792.0,147.0\" fill=\"currentColor\"/>\n</g>\n</svg>\n</figure>\n</body>\n</html></span>"
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     }
    ],
    "source": [
@@ -207,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.12-final"
   }
  },
  "nbformat": 4,
